WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40019
QuickTime 7.6.4 + Safari Nightly = Crash
https://bugs.webkit.org/show_bug.cgi?id=40019
Summary
QuickTime 7.6.4 + Safari Nightly = Crash
Jer Noble
Reported
2010-06-01 12:22:14 PDT
QuickTime 7.6.4 does not contain the symbol "QTCF_CFPropertyListCreateXMLData", and we crash when the function QTCFPropertyListCreateXMLData returns NULL.
Attachments
Patch
(1.28 KB, patch)
2010-06-01 12:32 PDT
,
Jer Noble
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2010-06-01 12:32:57 PDT
Created
attachment 57579
[details]
Patch
Jer Noble
Comment 2
2010-06-01 13:16:32 PDT
Committed
r60502
:
http://trac.webkit.org/changeset/60502
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug