QuickTime 7.6.4 + Safari Nightly = Crash https://bugs.webkit.org/show_bug.cgi?id=40019 rdar://problem/8035443

Reviewed by Sam Weinig.

Check the return value of QTCFPropertyListCreateXMLData before calling CFDataGetLength().

* platform/graphics/win/QTCFDictionary.cpp:
(QTCFDictionaryCreateCopyWithDataCallback):



Canonical link: https://commits.webkit.org/50175.169@safari-533-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-533-branch@60499 268f45cc-cd09-0410-ab3c-d52691b4dbfc