WebCore/platform/graphics/win/QTCFDictionary.cpp
@@ -52,9 +52,11 @@ CFDictionaryRef QTCFDictionaryCreateCopyWithDataCallback(CFAllocatorRef allocato
     ASSERT(callback);
 
     CFDataRef data = QTCFPropertyListCreateXMLData(kCFAllocatorDefault, dictionary);
+    if (!data)
+        return 0;
+
     CFDictionaryRef outputDictionary = callback(allocator, CFDataGetBytePtr(data), CFDataGetLength(data));
-    if (data)
-        CFRelease(data);
+    CFRelease(data);
 
     return outputDictionary;
 }
